--- a/IsItClosed/IsItClosed.csproj
+++ b/IsItClosed/IsItClosed.csproj
@@ -108,6 +108,7 @@
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
+    <None Include="docker-compose.ci.build.yml" />
     <None Include="IsItClosed_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
@@ -132,10 +133,10 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
-      <Version>6.0.5</Version>
+      <Version>6.0.7</Version>
     </PackageReference>
     <PackageReference Include="WindowsAzure.Storage">
-      <Version>8.7.0</Version>
+      <Version>9.0.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
